# llm_simple

./: .gitignore  CMakeLists.txt  orangepi_install.md  readme.md  test_tiny.sh
llama/llama2/13B/: params.json
prebuild/: defs.hpp  npu_ops.h
prompts/: chat_example.txt  readme.md
scripts/: benchmark_qwen2.5.sh  benchmark_qwen2.5_3B_bf16.sh  convert_llama2_weight.py  convert_llama_awq_4bit.py  convert_qwen2_awq_weight.py  convert_qwen2_weight.py  example_chat_llama2_13B_awq_4bit_orangepi.sh  example_chat_llama2_7B_awq_4bit_orangepi.sh  example_chat_llama2_7B_fp16_orangepi.sh  example_chat_qwen2.5_3B_bf16_orangepi.sh  example_orangepi_debug.sh  example_orangepi_msprof.sh  example_orangepi_msprof_awq_4bit.sh  example_orangepi_profiling.sh  example_orangepi_profiling_awq_4bit.sh  example_text_completion_deepseek_r1_qwen2.5_1.5B_bf16_orangepi.sh  example_text_completion_deepseek_r1_qwen2.5_14B_bf16_orangepi.sh  example_text_completion_deepseek_r1_qwen2.5_7B_bf16_orangepi.sh  example_text_completion_llama2_13B_awq_4bit_orangepi.sh  example_text_completion_llama2_13B_awq_4bit_orangepi_2.sh  example_text_completion_llama2_7B_awq_4bit_orangepi.sh  example_text_completion_llama2_7B_awq_4bit_orangepi_2.sh  example_text_completion_llama2_7B_fp16_orangepi.sh  example_text_completion_llama2_7B_fp16_orangepi_2.sh  example_text_completion_qwen2.5_14B_awq_orangepi.sh  example_text_completion_qwen2.5_32B_awq_orangepi.sh  example_text_completion_qwen2.5_3B_awq_orangepi.sh  example_text_completion_qwen2.5_3B_bf16_orangepi.sh  example_text_completion_qwen2.5_7B_awq_orangepi.sh  example_text_completion_qwen2.5_7B_bf16_orangepi.sh
src/: .gitignore  CMakeLists.txt  acl_util.hpp  defs.hpp  device.cpp  device.hpp  device_cpu.cpp  device_npu.cpp  llama2_layer_cpu.cpp  llama2_layer_cpu.hpp  llama2_layer_npu.cpp  llama2_layer_npu.hpp  llama2_main.cpp  llama2_model.cpp  llama2_model.hpp  model_base.cpp  model_base.hpp  profiling.cpp  profiling.hpp  qwen2_model.cpp  qwen2_model.hpp  tiktoken.h  tokenizer.cpp  tokenizer.hpp  util.cpp  util.h
tests/: CMakeLists.txt  embedding_main.cpp  embedding_test.cpp  embedding_test.h  flash_attn_main.cpp  flash_attn_test.cpp  flash_attn_test.h  gemm_awq_4bit_main.cpp  gemm_awq_4bit_test.cpp  gemm_awq_4bit_test.h  gemm_main.cpp  gemm_test.cpp  gemm_test.h  npu_op_test_util.cpp  npu_op_test_util.h  npu_operator_test.cpp  rms_norm_layer_main.cpp  rms_norm_layer_test.cpp  rms_norm_layer_test.h  rope_single_layer_main.cpp  rope_single_layer_test.cpp  rope_single_layer_test.h
